updated: repo details

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:curtiszimmerman/curtisz.com.git"
+    "url": "https://github.com/curtiszimmerman/curtisz.com.git"
   },
   "keywords": [
     "curtisz.com"
